--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>E9x M3 Inventory</title>
+    <title>index.html</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
 
 <div class="app-shell">
@@ -39,9 +40,7 @@
     <div class="summary-row">
         <div class="summary-left">
             <input type="checkbox" class="summary-checkbox">
-            <span class="summary-text">
-                <span id="count">0</span> of 25,672 Vehicle(s)
-            </span>
+            <span class="summary-text"><span id="count"></span> of 25,672 Vehicle(s)</span>
             <span class="badge-m3">M3</span>
         </div>
     </div>
@@ -60,290 +59,118 @@
                 <div class="header-cell header-interior">Int.</div>
                 <div class="header-cell header-year">Yr.</div>
                 <div class="header-cell header-vin">VIN</div>
-                <div class="header-cell header-packages">
-                    Accessories (Individual Paint<br>
-                    Charge - $5,000*)
-                </div>
-                <div class="header-cell header-price">
-                    MSRP (Includes<br>
-                    Gas Guzzler<br>
-                    and Destination<br>
-                    Charges)
-                </div>
-                <div class="header-cell header-dealer">
-                    Dealer Name (PC -<br>
-                    Center | E.D - Euro<br>
-                    Military)
-                </div>
+                <div class="header-cell header-packages">Packages</div>
+                <div class="header-cell header-price">MSRP</div>
+                <div class="header-cell header-dealer">Dealer</div>
             </div>
 
             <!-- FILTER INPUT ROW -->
             <div class="table-header">
                 <div class="header-cell header-status"></div>
                 <div class="header-cell header-checkbox"></div>
-                <div class="header-cell header-marketing">
-                    <input class="filter-input" data-field="marketing">
-                </div>
-                <div class="header-cell header-model">
-                    <input class="filter-input" data-field="model">
-                </div>
-                <div class="header-cell header-color">
-                    <input class="filter-input" data-field="color">
-                </div>
-                <div class="header-cell header-interior">
-                    <input class="filter-input" data-field="interior">
-                </div>
-                <div class="header-cell header-year">
-                    <input class="filter-input" data-field="year">
-                </div>
-                <div class="header-cell header-vin">
-                    <input class="filter-input" data-field="vin">
-                </div>
-                <div class="header-cell header-packages">
-                    <input class="filter-input" data-field="packages">
-                </div>
-                <div class="header-cell header-price">
-                    <input class="filter-input" data-field="price">
-                </div>
-                <div class="header-cell header-dealer">
-                    <input class="filter-input" data-field="dealer">
-                </div>
+                <div class="header-cell header-marketing"><input class="filter-input" data-field="marketing_name"></div>
+                <div class="header-cell header-model"><input class="filter-input" data-field="model"></div>
+                <div class="header-cell header-color"><input class="filter-input" data-field="ext_code"></div>
+                <div class="header-cell header-interior"><input class="filter-input" data-field="interior_code"></div>
+                <div class="header-cell header-year"><input class="filter-input" data-field="year"></div>
+                <div class="header-cell header-vin"><input class="filter-input" data-field="vin"></div>
+                <div class="header-cell header-packages"><input class="filter-input" data-field="packages"></div>
+                <div class="header-cell header-price"><input class="filter-input" data-field="price"></div>
+                <div class="header-cell header-dealer"><input class="filter-input" data-field="dealer"></div>
             </div>
 
-            <!-- DYNAMIC ROWS GO HERE -->
+            <!-- DYNAMIC ROWS GET INJECTED HERE -->
             <div id="table-rows"></div>
 
         </div>
     </div>
 </div>
 
+<!-- CSV PARSER + BUILDER -->
 <script>
-(async function () {
-    // --- helper: CSV -> array of values (handles quoted commas) ---
-    function parseCsvLine(line) {
-        if (!line) return [];
-        const regex = /("([^"]|"")*"|[^,]*)(,|$)/g;
-        const out = [];
-        let match;
-        while ((match = regex.exec(line)) !== null) {
-            let value = match[1] || "";
-            value = value.replace(/^"|"$/g, "").replace(/""/g, '"').trim();
-            out.push(value);
-        }
-        return out;
-    }
+async function loadCSV() {
+    const response = await fetch("data.csv");
+    const text = await response.text();
 
-    // --- load CSV ---
-    let text;
-    try {
-        const res = await fetch("data.csv");
-        if (!res.ok) throw new Error("data.csv not found");
-        text = await res.text();
-    } catch (e) {
-        console.error(e);
-        return;
-    }
+    const rows = text.trim().split("\n");
 
-    const lines = text.trim().split(/\r?\n/);
-    if (lines.length <= 1) return;
+    const headers = rows[0].split(",");
+    const cars = rows.slice(1).map(r => {
+        const cols = r.match(/(".*?"|[^",]+)(?=\s*,|\s*$)/g)
+            .map(v => v.replace(/^"|"$/g, ""));
+        const obj = {};
+        headers.forEach((h, i) => obj[h] = cols[i] || "");
+        return obj;
+    });
 
-    const headerCells = parseCsvLine(lines[0]);
-    const headerIndex = {};
-    headerCells.forEach((h, i) => headerIndex[h.trim()] = i);
+    document.getElementById("count").innerText = cars.length;
 
-    function get(rowArr, name) {
-        const idx = headerIndex[name];
-        return (idx != null && rowArr[idx] != null) ? rowArr[idx] : "";
-    }
+    const container = document.getElementById("table-rows");
+    container.innerHTML = "";
 
-    const vehicles = lines.slice(1)
-        .filter(l => l.trim().length > 0)
-        .map(line => {
-            const cols = parseCsvLine(line);
+    cars.forEach((car, i) => {
+        const row = document.createElement("div");
+        row.className = "table-row";
 
-            // support either layout:
-            // exterior_image,marketing_name,model,ext_code,ext_rgb,interior_code,interior_image,year,vin,packages
-            // or with "chassis" mixed in
-            const model = get(cols, "model") || get(cols, "chassis") || "E90";
-            const extCode = get(cols, "ext_code") || get(cols, "chassis") || "";
-            const extRgb = get(cols, "ext_rgb") || "";
-            return {
-                exterior_image: get(cols, "exterior_image"),
-                marketing_name: get(cols, "marketing_name") || "M3 Sedan",
-                model,
-                ext_code: extCode,
-                ext_rgb: extRgb,
-                interior_code: get(cols, "interior_code"),
-                interior_image: get(cols, "interior_image"),
-                year: get(cols, "year"),
-                vin: get(cols, "vin"),
-                packages: get(cols, "packages"),
-                price: get(cols, "price") || "",
-                dealer: get(cols, "dealer") || ""
-            };
-        });
+        row.innerHTML = `
+            <div class="cell cell-status"><div class="status-circle">G</div></div>
+            <div class="cell cell-checkbox"><input type="checkbox"></div>
 
-    // update count
-    document.getElementById("count").textContent = vehicles.length;
-
-    const table = document.getElementById("table-rows");
-    table.innerHTML = "";
-
-    vehicles.forEach((v, index) => {
-        const extCircleStyle = v.ext_rgb
-            ? `style="background-color: rgb(${v.ext_rgb});"`
-            : "";
-        const intSquareStyle = v.interior_image
-            ? `style="background-image:url('${v.interior_image}')"`
-            : "";
-
-        const rowHtml = `
-        <div class="table-row">
-            <div class="cell cell-status">
-                <div class="status-circle">G</div>
-            </div>
-
-            <div class="cell cell-checkbox">
-                <input type="checkbox">
-            </div>
-
-            <!-- Model name + image -->
             <div class="cell cell-marketing">
                 <div class="tooltip">
-                    <div class="marketing-name" style="background-image:url('${v.exterior_image}')">
-                        <span>${v.marketing_name}</span>
-                    </div>
-                    <div class="tooltiptext tooltip-red-content">
-                        ${v.marketing_name}
+                    <div class="marketing-name" style="background-image:url('${car.exterior_image}')">
+                        <span>${car.marketing_name}</span>
                     </div>
                 </div>
             </div>
 
-            <!-- Model code -->
-            <div class="cell cell-model">
-                ${v.model}
-            </div>
+            <div class="cell cell-model">${car.model}</div>
 
-            <!-- Exterior color -->
             <div class="cell cell-color">
-                <div class="tooltip">
-                    <div class="color-cell">
-                        <span class="circle" ${extCircleStyle}></span>
-                        <div class="label">${v.ext_code}</div>
-                    </div>
-                    <div class="tooltiptext tooltip-red-content">
-                        ${v.ext_code}
-                    </div>
+                <div class="color-cell">
+                    <span class="circle" style="background-color: rgb(${car.ext_rgb});"></span>
+                    <div class="label">${car.ext_code}</div>
                 </div>
             </div>
 
-            <!-- Interior color -->
             <div class="cell cell-interior">
-                <div class="tooltip">
-                    <div class="color-cell">
-                        <span class="square" ${intSquareStyle}></span>
-                        <div class="label">${v.interior_code}</div>
-                    </div>
-                    <div class="tooltiptext tooltip-red-content">
-                        ${v.interior_code}
-                    </div>
+                <div class="color-cell">
+                    <span class="square" style="background-image:url('${car.interior_image}')"></span>
+                    <div class="label">${car.interior_code}</div>
                 </div>
             </div>
 
-            <!-- Year -->
-            <div class="cell cell-year">
-                ${v.year}
-            </div>
+            <div class="cell cell-year">${car.year}</div>
 
-            <!-- VIN with copy button -->
             <div class="cell cell-vin">
-                <div class="tooltip">
-                    <span class="vin-text" id="vin-${index}">${v.vin}</span>
-                    <div class="tooltiptext tooltip-red-content">
-                        ${v.vin}
-                    </div>
-                </div>
-                <button class="copy-btn" data-copy-target="vin-${index}">⧉</button>
+                <span class="vin-text" id="vin-${i}">${car.vin}</span>
+                <button class="copy-btn" data-copy-target="vin-${i}">⧉</button>
             </div>
 
-            <!-- Packages -->
-            <div class="cell cell-packages">
-                ${v.packages}
-            </div>
-
-            <!-- Price -->
-            <div class="cell cell-price">
-                ${v.price}
-            </div>
-
-            <!-- Dealer -->
-            <div class="cell cell-dealer">
-                ${v.dealer}
-            </div>
-        </div>
+            <div class="cell cell-packages">${car.packages}</div>
+            <div class="cell cell-price">${car.price || ""}</div>
+            <div class="cell cell-dealer">${car.dealer || ""}</div>
         `;
 
-        table.insertAdjacentHTML("beforeend", rowHtml);
+        container.appendChild(row);
     });
 
-    // copy VIN buttons
+    initCopy();
+}
+
+function initCopy() {
     document.querySelectorAll(".copy-btn").forEach(btn => {
-        btn.addEventListener("click", () => {
+        btn.onclick = () => {
             const id = btn.dataset.copyTarget;
-            const el = document.getElementById(id);
-            if (!el) return;
-            const text = el.textContent.trim();
-            if (navigator.clipboard && navigator.clipboard.writeText) {
-                navigator.clipboard.writeText(text);
-            }
+            const text = document.getElementById(id).textContent.trim();
+            navigator.clipboard.writeText(text);
             btn.classList.add("copied");
-            setTimeout(() => btn.classList.remove("copied"), 600);
-        });
+            setTimeout(() => btn.classList.remove("copied"), 700);
+        };
     });
+}
 
-    // simple filter logic (press Enter in a filter box)
-    const fieldSelectors = {
-        marketing: ".cell-marketing",
-        model: ".cell-model",
-        color: ".cell-color",
-        interior: ".cell-interior",
-        year: ".cell-year",
-        vin: ".cell-vin",
-        packages: ".cell-packages",
-        price: ".cell-price",
-        dealer: ".cell-dealer"
-    };
-
-    function normalize(t) { return (t || "").toLowerCase().trim(); }
-
-    function applyFilters() {
-        const filters = {};
-        document.querySelectorAll(".filter-input").forEach(input => {
-            const val = normalize(input.value);
-            if (val) filters[input.dataset.field] = val;
-        });
-
-        document.querySelectorAll("#table-rows .table-row").forEach(row => {
-            let visible = true;
-            for (const field in filters) {
-                const cell = row.querySelector(fieldSelectors[field]);
-                const txt = normalize(cell ? cell.innerText : "");
-                if (!txt.includes(filters[field])) {
-                    visible = false;
-                    break;
-                }
-            }
-            row.style.display = visible ? "flex" : "none";
-        });
-    }
-
-    document.querySelectorAll(".filter-input").forEach(input => {
-        input.addEventListener("keydown", e => {
-            if (e.key === "Enter") applyFilters();
-        });
-    });
-
-})();
+loadCSV();
 </script>
 
 </body>
